--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,59 +57,99 @@
       <section class="gallery-list">
         <div class="gallery-list__header">
           <h2 class="gallery-list__title">Фото и видео</h2>
-          <p class="gallery-list__description">Не можете решиться на путешествие<br> из-за курса? Фотографии помогут вам<br> забыть о политике и экономике.</p>
+          <p class="gallery-list__description">Не можете решиться на путешествие<br> из-за курса?<br> Фотографии помогут вам<br> забыть о политике и экономике.</p>
         </div>
         <div class="gallery-list__item">
-          <img class="gallery-list__photo" src="../img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
-          <h3 class="gallery-list__item-subject">Неродные просторы</h3>
-          <p class="gallery-list__item-author">Автор фото: Борис</p>
-          <button class="gallery-list__item-button" type="button">
-            <span class="gallery-list__item-icon">
-              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
-                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-              </svg>
-            </span>
-            <span class="gallery-list__item-number">1350</span>
-          </button>
+          <picture class="gallery-list__photo">
+            <source media="(min-width: 1200px)" srcset="img/photo-1-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg">
+            <img src="../img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
+          </picture>
+          <div class="gallery-list__wrapper gallery-list__wrapper--gray">
+            <div class="gallery-list__wrapper-description">
+              <h3 class="gallery-list__item-subject">Неродные просторы</h3>
+              <p class="gallery-list__item-author">Автор фото: Борис</p>
+            </div>
+            <div class="gallery-list__wrapper-button">
+              <button class="gallery-list__item-button gallery-list__item-button--gray" type="button">
+                <span class="gallery-list__item-icon">
+                  <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                </span>
+                <span class="gallery-list__item-number">1350</span>
+              </button>
+            </div>
+          </div>
         </div>
         <div class="gallery-list__item">
-          <img class="gallery-list__photo" src="../img/photo-2-mobile@1x.jpg" alt="Фото цветущего кактуса на фоне гор">
-          <h3 class="gallery-list__item-subject">Местная растительность</h3>
-          <p class="gallery-list__item-author">Автор фото: Сергей</p>
-          <button class="gallery-list__item-button" type="button">
-            <span class="gallery-list__item-icon">
-              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
-                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-              </svg>
-            </span>
-            <span class="gallery-list__item-number">143</span>
-          </button>
+          <picture class="gallery-list__photo">
+            <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg">
+            <img src="../img/photo-2-mobile@1x.jpg" alt="Фото цветущего кактуса на фоне гор">
+          </picture>
+          <div class="gallery-list__wrapper gallery-list__wrapper--gray">
+            <div class="gallery-list__wrapper-description">
+              <h3 class="gallery-list__item-subject">Местная растительность</h3>
+              <p class="gallery-list__item-author">Автор фото: Сергей</p>
+            </div>
+            <div class="gallery-list__wrapper-button">
+              <button class="gallery-list__item-button" type="button">
+                <span class="gallery-list__item-icon">
+                  <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                </span>
+                <span class="gallery-list__item-number">143</span>
+              </button>
+            </div>
+          </div>
         </div>
         <div class="gallery-list__item">
-          <img class="gallery-list__photo" src="../img/photo-3-mobile@1x.jpg" alt="Фото горного серпантина">
-          <h3 class="gallery-list__item-subject">Дорога на север</h3>
-          <p class="gallery-list__item-author">Автор фото: Петр</p>
-          <button class="gallery-list__item-button" type="button">
-            <span class="gallery-list__item-icon">
-              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
-                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-              </svg>
-            </span>
-            <span class="gallery-list__item-number">96</span>
-          </button>
+          <picture class="gallery-list__photo">
+            <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg">
+            <img class="gallery-list__photo" src="../img/photo-3-mobile@1x.jpg" alt="Фото горного серпантина">
+          </picture>
+          <div class="gallery-list__wrapper gallery-list__wrapper--gray">
+            <div class="gallery-list__wrapper-description">
+              <h3 class="gallery-list__item-subject">Дорога на север</h3>
+              <p class="gallery-list__item-author">Автор фото: Петр</p>
+            </div>
+            <div class="gallery-list__wrapper-button">
+              <button class="gallery-list__item-button" type="button">
+                <span class="gallery-list__item-icon">
+                  <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                </span>
+                <span class="gallery-list__item-number">96</span>
+              </button>
+            </div>
+          </div>
         </div>
         <div class="gallery-list__item">
-          <img class="gallery-list__photo" src="../img/photo-4-mobile@1x.jpg" alt="Каньон">
-          <h3 class="gallery-list__item-subject">Мост Дьявола</h3>
-          <p class="gallery-list__item-author">Автор фото: Антон</p>
-          <button class="gallery-list__item-button" type="button">
-            <span class="gallery-list__item-icon">
-              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
-                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-              </svg>
-            </span>
-            <span class="gallery-list__item-number">254</span>
-          </button>
+          <picture class="gallery-list__photo">
+            <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg">
+            <img class="gallery-list__photo" src="../img/photo-4-mobile@1x.jpg" alt="Каньон">
+          </picture>
+          <div class="gallery-list__wrapper gallery-list__wrapper--gray">
+            <div class="gallery-list__wrapper-description">
+              <h3 class="gallery-list__item-subject">Мост Дьявола</h3>
+              <p class="gallery-list__item-author">Автор фото: Антон</p>
+            </div>
+            <div class="gallery-list__wrapper-button">
+              <button class="gallery-list__item-button" type="button">
+                <span class="gallery-list__item-icon">
+                  <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                </span>
+                <span class="gallery-list__item-number">254</span>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
 
