--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,8 @@
           <a class="main-header__logo" href="index.html" aria-label="Sedona">
             <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
           </a>
-          <nav class="main-nav">
-            <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <nav class="main-nav main-nav--opened main-nav--nojs">
+            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
             <div class="main-nav__wrapper">
               <ul class="main-nav__list site-list">
                 <li class="site-list__item">
@@ -212,5 +212,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
