--- a/source/index.html
+++ b/source/index.html
@@ -64,9 +64,9 @@
           </div>
           <div class="advantages-list__wrapper-block">
             <div class="advantages-list__item advantages-list__item--first advantages-list__wrapper advantages-list__item--blue advantages-list__item--triangle">
-              <h3 class="advantages-list__item-subject">Настоящий городок</h3>
+              <h3 class="advantages-list__item-subject advantages-list__item-subject--first">Настоящий<br> городок</h3>
               <p class="advantages-list__numbering">— №1 —</p>
-              <p class="advantages-list__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
+              <p class="advantages-list__description-excerpt">Cедона не аттракцион для<br> туристов,<br> там течет своя<br> жизнь</p>
             </div>
             <div class="advantages-list__item-picture advantages-list__item-picture--first"></div>
           </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="advantages-list__wrapper-block advantages-list__wrapper-block--reverse">
             <div class="advantages-list__item advantages-list__item-second advantages-list__wrapper advantages-list__item--blue">
-              <h3 class="advantages-list__subject-title">Там есть Мост дьявола</h3>
+              <h3 class="advantages-list__item-subject">Там есть<br> Мост дьявола</h3>
               <p class="advantages-list__numbering">— №2 —</p>
               <p class="advantages-list__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
@@ -94,17 +94,17 @@
           </div>
           <div class="advantages-list__wrapper-block advantages-list__wrapper-block--gray">
             <div class="advantages-list__item advantages-list__wrapper advantages-list__item--third advantages-list__item--gray">
-              <h3 class="advantages-list__subject-title advantages-list__subject-title--padding">Небольшая площадь</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title--padding">Небольшая<br> площадь</h3>
               <p class="advantages-list__numbering">— №3 —</p>
               <p class="advantages-list__description-excerpt">Все интересные места находятся<br> очень близко</p>
             </div>
             <div class="advantages-list__item advantages-list__wrapper advantages-list__item--fourth advantages-list__item--gray">
-              <h3 class="advantages-list__subject-title advantages-list__subject-title--padding">Красивая дорога</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title--padding">Красивая<br> дорога</h3>
               <p class="advantages-list__numbering">— №4 —</p>
               <p class="advantages-list__description-excerpt">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
             </div>
             <div class="advantages-list__item advantages-list__wrapper advantages-list__item--fifth advantages-list__item--gray">
-              <h3 class="advantages-list__subject-title advantages-list__subject-title--padding">Мало туристов</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title--padding">Мало<br> туристов</h3>
               <p class="advantages-list__numbering">— №5 —</p>
               <p class="advantages-list__description-excerpt">Большинство едет в Гранд Каньон<br> и толпится там</p>
             </div>
@@ -119,7 +119,13 @@
             <a class="button button--blue offer__button" href="#">Найти гостиницу</a>
           </div>
           <div class="offer__map">
-            <!-- <img class="offer__map" src="./img/map-mobile@1x.jpg" width="320" height="350" alt="Карта Аризоны"> -->
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38031261544!2d-111.8653499851803!3d34.854358225149475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2slv!4v1653172838337!5m2!1sru!2slv"
+              width="320"
+              height="350"
+              allowfullscreen=""
+              title="Карта Аризоны">
+            </iframe>
           </div>
         </section>
       </main>
@@ -170,6 +176,6 @@
       </footer>
     </div>
 
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
