--- a/source/form.html
+++ b/source/form.html
@@ -97,17 +97,17 @@
                     <label class="testimonials-filters__title">Ваше общее впечатление:</label>
                     <div class="radio-button">
                       <label class="radio-button__label">
-                        <input class="radio-button__input" type="radio" name="opinion" value="positive" tabindex="1" checked>
+                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="positive" tabindex="1" checked>
                         <span class="radio-button__mark"></span>
                         <span class="radio-button__text">Скорее положительное</span>
                       </label>
                       <label class="radio-button__label">
-                        <input class="radio-button__input" type="radio" name="opinion" value="negative" tabindex="2">
+                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="negative" tabindex="2">
                         <span class="radio-button__mark"></span>
                         <span class="radio-button__text">Скорее отрицательное</span>
                       </label>
                       <label class="radio-button__label">
-                        <input class="radio-button__input" type="radio" name="opinion" value="abstain" tabindex="3">
+                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="abstain" tabindex="3">
                         <span class="radio-button__mark"></span>
                         <span class="radio-button__text">Затрудняюсь ответить</span>
                       </label>
@@ -118,19 +118,19 @@
                     <label class="testimonials-filters__title">Посещенные достопримечательности:</label>
                     <div class="checkbox">
                       <label class="checkbox__label">
-                        <input class="checkbox__input" type="checkbox" name="landmark" value="1" checked>
+                        <input class="visually-hidden checkbox__input" type="checkbox" name="landmark" value="1" checked>
                         <span class="checkbox__text">Мост Дьявола</span>
                       </label>
                       <label class="checkbox__label">
-                        <input class="checkbox__input" type="checkbox" name="landmark" value="2" checked>
+                        <input class="visually-hidden checkbox__input" type="checkbox" name="landmark" value="2" checked>
                         <span class="checkbox__text">Гора-Колокол</span>
                       </label>
                       <label class="checkbox__label">
-                        <input class="checkbox__input" type="checkbox" name="landmark" value="3" checked>
+                        <input class="visually-hidden checkbox__input" type="checkbox" name="landmark" value="3" checked>
                         <span class="checkbox__text">Слайд-парк</span>
                       </label>
                       <label class="checkbox__label">
-                        <input class="checkbox__input" type="checkbox" name="landmark" value="4">
+                        <input class="visually-hidden checkbox__input" type="checkbox" name="landmark" value="4">
                         <span class="checkbox__text">Красные скалы</span>
                       </label>
                     </div>
@@ -139,13 +139,13 @@
                   <div class="testimonials-filters__group description">
                     <label class="testimonials-filters__title" for="description">Опишите свои эмоции:</label>
                     <div class="textarea">
-                      <textarea class="textarea__text" name="description" id="description" cols="30" rows="5">Опишите подробно все свои восторги</textarea>
+                      <textarea class="textarea__text" name="description" id="description" placeholder="Опишите подробно все свои восторги"></textarea>
                     </div>
                   </div>
 
                   <div class="testimonials-filters__group form-button">
-                    <button class="testimonials-filters__button" type="submit">Отправить отзыв</button>
-                    <span class="marked"><sup>*</sup> — обязательные поля</span>
+                    <button class="testimonials-filters__button button" type="submit">Отправить отзыв</button>
+                    <span class="testimonials-filters__marked"><sup>*</sup> — обязательные поля</span>
                   </div>
                 </div>
             </form>
