--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
       <header class="main-header">
         <div class="main-header__wrapper">
           <a class="main-header__logo" href="index.html" aria-label="Sedona">
-            <img class="main-header__logo-image" src="./img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+            <img class="main-header__logo-image" src="./img/logotype.svg" width="185" height="96" alt="Город Седона">
           </a>
           <nav class="main-nav main-nav--opened main-nav--nojs">
             <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -29,7 +29,7 @@
                 </li>
                 <li class="site-list__item site-list__logo">
                   <a class="site-list__link" href="index.html" aria-label="Sedona">
-                    <img class="main-header__logo-image" src="./img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+                    <img class="main-header__logo-image" src="./img/logotype.svg" width="185" height="96" alt="Город Седона">
                   </a>
                 </li>
                 <li class="site-list__item">
@@ -52,7 +52,11 @@
         <h1 class="visually-hidden">Каталог фото и видео Седоны</h1>
 
         <div class="inner-intro">
-          <img class="inner-intro__name" src="./img/text-sedona.svg" width="229" height="29" alt="надпись Седона">
+          <picture>
+            <source media="(min-width:1200px)" srcset="./img/text-sedona-desktop.svg">
+            <source media="(min-width:768px)" srcset="./img/text-sedona-tablet.svg">
+            <img class="inner-intro__name" src="./img/text-sedona-mobile.svg" width="229" height="39" alt="надпись Седона">
+          </picture>
         </div>
 
         <section class="gallery-list">
